# RPCNIC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bluefield/: bf_encode.h  bf_no_encode.h  bf_serdes_noencode_main.h
doc/: EXP.md
hardware_verilog/: Ser_ProtoAcc-PCIe.sv  StaticU280Top.sv
include/: config.h  decode.h  encode.h  encode_main.h  no_encode.h  no_encode_main.h  old_encode.h  paralizer.h
include/bench_header/: 16int_microbench_target.inc  16int_microbench_testclass.h  1int_microbench_target.inc  1int_microbench_testclass.h  2int_microbench_target.inc  2int_microbench_testclass.h  32int_microbench_target.inc  32int_microbench_testclass.h  4int_microbench_target.inc  4int_microbench_testclass.h  64int_microbench_target.inc  64int_microbench_testclass.h  8int_microbench_target.inc  8int_microbench_testclass.h  bench0_target.inc  bench0_testclass.h  bench1_target.inc  bench1_testclass.h  bench2_testclass.h  bench3_target.inc  bench3_testclass.h  bench4_target.inc  bench4_testclass.h  bench5_testclass.h  deathstarbench_target.inc  deathstarbench_testclass.h
src/: deserialize_hw.cpp  microbench_hw.cpp  microbench_sw.cpp  serialize_co.cpp  serialize_hw.cpp  serialize_sw.cpp
src/chisel/rpcnic/: AXISToHbm.scala  AXISToHbmSim.scala  BandwidthProbe.scala  Control.scala  ControlMul.scala  DDRSimBlackbox.scala  DerToMem.scala  Elaborate.scala  EngineSim.scala  Example.scala  FpgaCloudBaseTop.scala  FpgaCloudClientTop.scala  FpgaCloudDeser.scala  FpgaCloudMulTop.scala  FpgaCloudSer.scala  FpgaCloudSerHw.scala  FpgaCloudTop.scala  Interface.scala  MemToNet.scala  NetToMem.scala  ReadHost.scala  ReadHostClient.scala  ReadHostDeser.scala  SimpleHash.scala  SplitDe.scala  SplitDeMul.scala  StaticFpgaCloudTop.scala  U280DynamicGreyBox.scala  cloudfpgaClientSim.scala  cloudfpgaDeserSim.scala  cloudfpgaSerSim.scala  cloudfpgaSerhwSim.scala  cloudfpgaServerMulSim.scala  cloudfpgaServerSim.scala  cloudfpgaSim.scala  cloudfpgaSimMul.scala
src/chisel/serialiation/: ClassMetaTable.scala  Data128to512.scala  DataWidthConvernt.scala  Deserializer.scala  Deserializer128.scala  Deserializer512.scala  DeserializerBase.scala  DeserializerSimple.scala  Elaborate.scala  Interface.scala  Serializer.scala  SerializerSimple.scala  SerializerTop.scala  Serializerhw.scala  WriteDeser.scala  WriteDeserBase.scala  WriteDeserSimple.scala  WriteSer.scala  varint.scala
test_suite/bluefield/rpcacc_micro/: CMakeLists.txt  bf_decode.h  bf_micro.h  bf_micro_bench.cpp  bf_micro_export.cpp  bf_serdes_main.h
test_suite/dsa_offload/: dsa_no_encode.h  dsa_no_encode_main.h  dsa_sw_micro.cpp
test_suite/e2e_compression/sw_baseline/: CMakeLists.txt
test_suite/hardware_tb/: a.txt  client.txt  meta.txt  rpc0.txt  server.txt  tb_cloudfpgaDeserSim.sv  tb_cloudfpgaMulSim.sv  tb_cloudfpgaSerSim.sv  tb_cloudfpgaSerhwSim.sv  tb_cloudfpgaSim.sv
test_suite/hardware_tb/bench2_meta/: meta0.txt  meta1.txt  meta2.txt  meta3.txt  meta4.txt  meta5.txt  meta6.txt  meta7.txt  meta8.txt  meta9.txt
utils/: QDMAController.cpp  hs_clock.h  numautil.cpp  numautil.h  spinlock_mutex.h
